--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -39,6 +39,7 @@
         align-items: center;
         margin: 20px;
         position: relative;
+        cursor: pointer;
 
         .icon {
           font-size: 20px;
